Fix CORS configuration for allowed methods